# PassHolder

./: .gitattributes  .gitignore  README.md  animation_frames.py  cli.py  config.py  encryptedSQLiteDB.py  install.py  install.sh  install_venv.py  main.py  passholder.py  passwords.db.enc  pyproject.toml  requirements.txt  setup-permissions.sh  ui.py
