[project]
name = "passholder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "rich>=14.1.0",
    "cryptography>=41.0.0",
    "pyperclip>=1.8.0",
]

[tool.setuptools]
py-modules = ["main", "cli", "ui", "encryptedSQLiteDB", "config"]
